# CRAncestorBook

./: .gitignore  CHANGELOG.md  LICENSE  README.md  project.toml.example  pyproject.toml
CRAncestorBook/: .env.example  main_build_book.py  main_build_chapters.py  main_build_environment.py  main_build_toc.py  version.py
CRAncestorBook/ai/: __init__.py  book_pipeline_ai.py
CRAncestorBook/book_build/: __init__.py  book_builder_3.py
CRAncestorBook/chapter_phases/: __init__.py  phase_coverage.py  phase_dedup.py  phase_draft.py  phase_enrichment.py  phase_paragraph.py  phase_style.py
CRAncestorBook/chapter_phases/enrichment/: README.md  __init__.py  enrichment_ai.py  enrichment_db.py  enrichment_decide.py  enrichment_decompose.py  (+6 more)
CRAncestorBook/chapter_pipeline_runtime/: __init__.py  pipeline_plan.py  pipeline_registry.py  step_validation.py
CRAncestorBook/config/: README.md  __init__.py  pipeline_config.py  run_config.py
CRAncestorBook/core/: __init__.py  book_context.py  constants.py  helpers.py
CRAncestorBook/paths/: __init__.py  env_prep.py  path_patterns.py
CRAncestorBook/pipeline/: __init__.py  definitions.py  global_runner.py  runner.py
CRAncestorBook/toc_build/: __init__.py  toc_builder.py  toc_context.py
CRAncestorBook/toc_phases/: __init__.py  phase_toc.py
guide/: START_HERE.md
guide/interview/: 01-timeline-questions.md  02-sensitive-questions.md  03-favorites-questions.md  04-generational-questions.md  05-clearing-the-air.md  README.md
guide/prompts/: README.md  ancestor_prompts_3.json
guide/sample_biography/: README.md
